# g7ctrl

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  OLD-TODO  README  README-3.4,1.md  README-3.4.5.md  TODO  configure.ac  sonar-project.properties
bldscripts/: .directory  autoclean.sh  basic-bootstrap.sh  bootstrap-OSX-README.txt  bootstrap-OSX.sh  bootstrap-deb.sh  bootstrap.sh  cntwc.sh  cov-bld.sh  cov-upload.sh  dbgbuild.sh  dbgconfig.sh  g7ctrl.spec  gstackfcore.sh  init-update.sh  ljpbuild.sh  mkcl.sh  mkdebpkg  mkhtmlnews.sh  mkrelease.sh  remtrsp.sh  runsonar.sh  setcorefile.sh  src-stat.sh  stdbuild.sh  ststbuild.sh  ststenvbuild.sh  ststrun.sh  svn2cl.xsl  svntag  tbc.sh  update.sh
deb_pkg/: g7ctrl_3.4.0-1.dsc  g7ctrl_3.4.0-1_amd64.build  g7ctrl_3.4.0-1_amd64.changes  g7ctrl_3.4.0-1_amd64.deb  g7ctrl_3.4.0-1_source.build  g7ctrl_3.4.0-1_source.changes  g7ctrl_3.4.0-1_source.ppa.upload
deb_pkg/g7ctrl-3.4.0/: INSTALL  TODO
deb_pkg/g7ctrl-3.4.0.OLD/: Makefile.am  NEWS  README  configure.ac
deb_pkg/g7ctrl-3.4.0.OLD/debian/: control  files  g7ctrl.substvars
deb_pkg/g7ctrl-3.4.0.OLD/docs/: README
deb_pkg/g7ctrl-3.4.0.OLD/docs/manpages/: Makefile.am  g7sh.1
deb_pkg/g7ctrl-3.4.0.OLD/src/: configmake.h  connwatcher.c  dbcmd.h  dict.c  dict.h  export.h  g7config.c  g7ctrl  g7ctrl.c  g7pdf_report_model.c  g7pdf_report_view.h  g7srvcmd.c  geoloc.h  geoloc_cache.c  geoloc_cache.h  logger.c  mailutil.h  pcredmalloc.c  presets.h  serial.h  sighandling.c  socklistener.c  socklistener.h  tracker.c
deb_pkg/g7ctrl-3.4.0.OLD/src/emul/: Makefile.am  README  gm7emul.c
deb_pkg/g7ctrl-3.4.0.OLD/src/libiniparser/: Makefile.am
deb_pkg/g7ctrl-3.4.0.OLD/src/shell/: Makefile.am  g7sh  g7shell.c
deb_pkg/g7ctrl-3.4.0/assets/: dumpdb.sh
deb_pkg/g7ctrl-3.4.0/debian/: g7ctrl.dirs  postinst
deb_pkg/g7ctrl-3.4.0/src/: Makefile.am  build.h  dbcmd.c  export.c  futils.c  futils.h  g7cmd.c  g7cmd.h  g7config.h  g7ctrl.h  g7pdf_report_model.h  g7pdf_report_view.c  g7sendcmd.c  g7srvcmd.c  g7srvcmd.h  geoloc.c  geoloc_cache.c  geoloc_cache.h  gpsdist.h  lockfile.c  mailutil.c  nicks.c  pcredmalloc.h  presets.c  serial.c  unicode_tbl.c  unicode_tbl.h  utils.c  utils.h  wreply.c  wreply.h
design/web-ui/: Start.screen
design/web-ui/assets/: TrackerListLine.screen
docs/: Makefile.am  README  g7ctrl-webhelp-3.4.1.tar.xz  g7ctrldocs.xpr
docs/errata/: errata-gm7.odt
docs/manpages/: Makefile.am  g7ctrl.1.xml  g7sh.1.xml
docs/manual/: Backlog.xml  CommandReference.xml  ConfiguringDaemon.xml  ConnectingDevice.xml  ControllingDevice.xml  ExportingDB.xml  Installing.xml  Introduction.xml  Makefile.am  Manual.xml  NEWS.xml  Preface.xml  ReceivingData.xml  References.xml  ReleaseHistory.xml  RunningTheDaemon.xml  Technical.xml  TheCommandShell.xml  TroubleShooting.xml  empty-src-stat.sh  fop.cfg  gm7_tracker.xcf  gm7_tracker_tall.xcf  src-stat.awk  table-src-stats.xml
docs/manual/css_stylesheets/: article-fancyterm.css
docs/manual/dbdoc/: README  export_db.rng
docs/manual/xsl_stylesheets/: chunk.xsl  chunk.xsl.in  common.xsl.in  epub.xsl  epub.xsl.in  fo.xsl  fo.xsl.in  html.fancycmd.xsl  html.fancycmd.xsl.in  html.xsl  html.xsl.in  website.xsl  website.xsl.in
dpkg/: README
dpkg/debian/: changelog  control  copyright  debhelper-build-stamp  files  g7ctrl.dirs  g7ctrl.substvars  postinst  postrm  preinst  prerm  rules
releases/: README-3.3.2.md  README-3.3.3.md  g7ctrl-1.0.1.tar.xz  g7ctrl-2.1.6.tar.xz  g7ctrl-3.1.0.tar.xz  g7ctrl-3.2.0.tar.xz  g7ctrl-3.3.0.tar.xz  g7ctrl-3.3.1.tar.xz  g7ctrl-3.3.2.tar.xz  g7ctrl-3.3.3.tar.xz  g7ctrl-3.4.0.tar.xz  g7ctrl-3.4.1.tar.xz
releases/test/: .directory  ArgsTest.cpp  ansii-test.c  arl.c  cmdlist_varlist.xml  cntu8.c  comp_rl.c  conn-gprs.txt  download  events.txt  ex_reply.xml  fil_tbl.gawk  gen_cmd_xml.c  gencmd_xml  geoloc.c  gpsdist.c  mbprintf.c  select_prot.c  send_event.sh  sendloc.sh  src-bd.awk  strcpy.c  tabledrawing-v1.c  tabledrawing-v2.c  tabledrawing-v3.c  tabledrawing.c  tclock.c  telenor.txt  test-main.c.template  test_mloc.c  tracker_db.sqlite  tst_template_mail.txt  tst_u8_printf.c  tst_xatou.c  tstlong.c  unicode_tbl-v1.c  unicode_tbl.c  unicode_tbl.h  utf8_tst.c  vsftpd.spec  (+2 more)
releases/test/GPX/: gpx-1.1.rng
releases/test/assoc/: assocarray.c  main.c  xstr.c  xstr.h
releases/test/fld/: #splitfields.c#  splitfields.c  (+1 more)
src/: Doxyfile  Makefile.am  assocarray.c  assocarray.h  build.h  connwatcher.c  connwatcher.h  dbcmd.c  dbcmd.h  dict.c  export.c  export.h  futils.c  futils.h  g7cmd.c  g7cmd.h  g7config.c  g7config.h  g7ctrl.c  g7ctrl.h  g7pdf_report_model.c  g7pdf_report_model.h  g7pdf_report_view.c  g7pdf_report_view.h  g7sendcmd.c  g7sendcmd.h  g7srvcmd.c  g7srvcmd.h  geoloc.c  geoloc.h  geoloc_cache.c  geoloc_cache.h  gpsdist.c  gpsdist.h  json_util.c  json_util.h  lockfile.c  lockfile.h  logger.c  logger.h  (+26 more)
src/emul/: Makefile.am  README  gm7emul  gm7emul.c
src/etc/: Makefile.am  README  deb.init.d.in  g7ctrl.conf.template.in  g7ctrl.service.in  ubuntu.init.d.in
src/etc/event-scripts/: 0_action.sh.template  100_action.sh.template  1_action.sh.template  2_action.sh.template  34_action.sh.template  37_action.sh.template  40_action.sh.template  48_action.sh.template  4_action.sh.template  tracker_conn.sh.template
src/etc/presets/: rec_off.preset.template  rec_on.preset.template  sleep_wm.preset.template
src/libhpdftbl/: Makefile.am
src/libiniparser/: iniparser.c
src/libsmtpmail/: Makefile.am  README  base64ed.c  base64ed.h  mailclientlib.c  mailclientlib.h  quotprinted.c  quotprinted.h
src/libunitbl/: README  unicode_tbl.c  unicode_tbl.h
src/libxstr/: Makefile.am
src/mail_templates/: mail_event.html  mail_event_img.html  mail_event_img.txt  mail_lastloc.html  mail_lastloc.txt  mail_lastloc_img.html  mail_lastloc_img.txt  mail_quotalimit.html  mail_quotalimit.txt  mail_tracker_conn.html  mail_tracker_conn.txt  mail_with_export_attachment.html
src/shell/: INSTALL  Makefile.am  README  g7shell.c
src/shell/test/: Makefile  comp_rl  comp_rl.c  rl_comp_ex.c
systest/: g7ctrl.conf
(+98 files in other folders)
