# ===============================================================================
# Automake file to build documentation. This is the top file which
# is used to create both manpages and manual
# Author:      Johan Persson (johan162@gmail.com)
# SVN:         $Id: Makefile.am 862 2015-03-20 00:04:28Z ljp $
#
# Copyright (C) 2014 Johan Persson
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>
# =========================================================================

SUBDIRS = . manpages manual

EXTRA_DIST = README 


